--- a/Client.UI/Views/Game/GamePage.xaml
+++ b/Client.UI/Views/Game/GamePage.xaml
@@ -19,6 +19,9 @@
             <TabItem Header="{x:Static resx:Texts.Chat}">
                 <Frame x:Name="ChatFrame" Source="Chat.xaml" DataContext="{Binding ChatViewModel}" LoadCompleted="Frame_LoadCompleted" DataContextChanged="Frame_DataContextChanged" />
             </TabItem>
+            <TabItem Header="{x:Static resx:Texts.CombatLog}">
+                <Frame x:Name="CombatLogFrame" Source="CombatLog.xaml" DataContext="{Binding CombatLogViewModel}" LoadCompleted="Frame_LoadCompleted" DataContextChanged="Frame_DataContextChanged" />
+            </TabItem>
         </TabControl>
         <notifications:NotificationArea x:Name="NotificationArea" Position="BottomRight" MaxItems="3"/>
     </Grid>
