Client/CombatLog: replaced simplistic combat log with rich text box that allows colors

--- a/Client.UI/Controls/CardDeck.xaml
+++ b/Client.UI/Controls/CardDeck.xaml
@@ -56,7 +56,7 @@
                         </Border.Style>
                         <controls:CardControl DataContext="{Binding}" />
                     </Border>
-                    <ListView ItemsSource="{Binding Auras}">
+                    <ListView ItemsSource="{Binding Auras}" Visibility="{Binding HasAuras, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <Image Source="{Binding Image}" />
