--- a/Client.UI/Controls/CardDeck.xaml
+++ b/Client.UI/Controls/CardDeck.xaml
@@ -57,9 +57,22 @@
                         <controls:CardControl DataContext="{Binding}" />
                     </Border>
                     <ListView ItemsSource="{Binding Auras}" Visibility="{Binding HasAuras, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="{x:Type ListViewItem}">
+                                <Setter Property="Focusable" Value="False"/>
+                                <Setter Property="Background" Value="Transparent" />
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                            <ContentPresenter />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </ListView.ItemContainerStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <Image Source="{Binding Image}" />
+                                <Image Source="{Binding Image}" ToolTip="{Binding Text}" Width="40" Height="40" Margin="2" />
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
