--- a/Client.UI/Views/Game/MainMenu.xaml
+++ b/Client.UI/Views/Game/MainMenu.xaml
@@ -18,6 +18,7 @@
     </Page.Resources>
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <Button Style="{StaticResource ButtonStyle}" Content="{x:Static resx:Texts.StartGame}" Command="{Binding StartGameCommand}" />
+        <Button Style="{StaticResource ButtonStyle}" Content="{x:Static resx:Texts.Achievements}" Command="{Binding AchievementsCommand}" />
         <Button Style="{StaticResource ButtonStyle}" Content="{x:Static resx:Texts.PasswordChange}" Click="ChangePassword_Click" />
         <Button Style="{StaticResource ButtonStyle}" Content="{x:Static resx:Texts.Logout}" Click="LogoutButton_Click" />
     </StackPanel>
