Added UI parts to support Blocking/adding friends

--- a/Client.UI/Views/User/UserListWindow.xaml
+++ b/Client.UI/Views/User/UserListWindow.xaml
@@ -12,36 +12,42 @@
     </Window.DataContext>
     <TabControl SelectionChanged="TabControl_SelectionChanged">
         <TabItem x:Name="FriendsTab" Header="{x:Static resx:Texts.Friends}">
-            <ListBox ItemsSource="{Binding Friends}" HorizontalContentAlignment="Stretch">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="0 2">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Ellipse Width="6" Height="6" Margin="2">
-                                <Ellipse.Style>
-                                    <Style TargetType="Ellipse">
-                                        <Setter Property="Fill" Value="Red"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding IsOnline}" Value="True">
-                                                <Setter Property="Fill" Value="LightGreen" />
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Ellipse.Style>
-                            </Ellipse>
-                            <TextBlock Text="{Binding Name}" Grid.Column="1" Margin="2" />
-                            <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="2">
-                                <Button Content="&#x274C;" Foreground="Red" Command="{Binding RemoveFriend}" Margin="2 0" />
-                                <Button Content="&#x2757;" Foreground="Yellow" Command="{Binding BlockUser}" />
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <TextBox x:Name="AddFriendTextBox" Width="100" Margin="2 0" />
+                    <Button Padding="2" Content="{x:Static resx:Texts.Add}" Command="{Binding AddFriendCmd}" CommandParameter="{Binding Text, ElementName=AddFriendTextBox}" IsDefault="{Binding IsFocused, ElementName=AddFriendTextBox}" />
+                </StackPanel>
+                <ListBox ItemsSource="{Binding Friends}" HorizontalContentAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="0 2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <Ellipse Width="6" Height="6" Margin="2">
+                                    <Ellipse.Style>
+                                        <Style TargetType="Ellipse">
+                                            <Setter Property="Fill" Value="Red"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsOnline}" Value="True">
+                                                    <Setter Property="Fill" Value="LightGreen" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Ellipse.Style>
+                                </Ellipse>
+                                <TextBlock Text="{Binding Name}" Grid.Column="1" Margin="2" />
+                                <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="2">
+                                    <Button Content="&#x274C;" Foreground="Red" Command="{Binding RemoveFriend}" Margin="2 0" />
+                                    <Button Content="&#x2757;" Foreground="Yellow" Command="{Binding BlockUser}" />
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
         </TabItem>
         <TabItem x:Name="FriendRequestsTab" Header="{x:Static resx:Texts.FriendRequests}">
             <ListBox ItemsSource="{Binding FriendRequests}" HorizontalContentAlignment="Stretch">
@@ -63,20 +69,26 @@
             </ListBox>
         </TabItem>
         <TabItem x:Name="BlockedTab" Header="{x:Static resx:Texts.BlockedUsers}">
-            <ListBox ItemsSource="{Binding BlockedUsers}" HorizontalContentAlignment="Stretch">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="0 2">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding Name}" Margin="2" />
-                            <Button Grid.Column="1" Content="&#x274C;" Foreground="Red" Command="{Binding RemoveBlockedUser}" Margin="2" />
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <TextBox x:Name="BlockUserTextBox" Width="100" Margin="2 0" />
+                    <Button Padding="2" Content="{x:Static resx:Texts.Block}" Command="{Binding BlockUserCmd}" CommandParameter="{Binding Text, ElementName=BlockUserTextBox}" IsDefault="{Binding IsFocused, ElementName=BlockUserTextBox}" />
+                </StackPanel>
+                <ListBox ItemsSource="{Binding BlockedUsers}" HorizontalContentAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="0 2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding Name}" Margin="2" />
+                                <Button Grid.Column="1" Content="&#x274C;" Foreground="Red" Command="{Binding RemoveBlockedUser}" Margin="2" />
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
         </TabItem>
     </TabControl>
 </Window>
