--- a/Client.UI/Views/Settings/ChangePasswordWindow.xaml
+++ b/Client.UI/Views/Settings/ChangePasswordWindow.xaml
@@ -4,12 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:resx="clr-namespace:Client.UI.Resources"
-        xmlns:viewmodels="clr-namespace:Client.UI.ViewModels.Settings"
         mc:Ignorable="d"
         Title="{x:Static resx:Texts.PasswordChange}" ResizeMode="NoResize" Height="160" Width="270">
-    <Window.DataContext>
-        <viewmodels:ChangePasswordViewModel />
-    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="22" />
@@ -28,7 +24,7 @@
         <PasswordBox x:Name="Password" Grid.Row="1" Grid.Column="1" Margin="2"/>
         <TextBlock Grid.Row="2" Text="{x:Static resx:Texts.PasswordAgain}" Margin="2"/>
         <PasswordBox x:Name="PasswordAgain" Grid.Row="2" Grid.Column="1" Margin="2"/>
-        <TextBlock Grid.Row="3" Grid.ColumnSpan="2" Text="{Binding ErrorMessage}" Margin="2" Foreground="Red" />
+        <TextBlock Grid.Row="3" Grid.ColumnSpan="2" x:Name="ErrorMessageTextBlock" Margin="2" Foreground="Red" />
         <StackPanel Grid.ColumnSpan="2" Grid.Row="4" HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
             <Button x:Name="OkButton" Click="OkButton_Click" Content="{x:Static resx:Texts.Save}" Margin="2 0" Padding="2" />
             <Button Click="CancelButton_Click" IsCancel="True" Content="{x:Static resx:Texts.Cancel}" Padding="2" />
