Fixed backing out from achievements screen, disabled backing to login screen, added an option to clear chat, enter now submits chat messages

--- a/Client.UI/Views/Game/Chat.xaml
+++ b/Client.UI/Views/Game/Chat.xaml
@@ -39,7 +39,7 @@
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox Text="{Binding Message}" />
+                <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" KeyDown="TextBox_KeyDown" />
                 <Button Grid.Column="1" Content="{x:Static resx:Texts.Send}" Command="{Binding HandleChatCommandCmd}" Width="100" />
             </Grid>
         </Grid>
